syntax = "proto3";

package ai.lzy.v1.portal;

import "ai/lzy/v1/common/storage.proto";
import "ai/lzy/v1/common/slot.proto";

option java_outer_classname = "LzyPortal";
option java_package = "ai.lzy.v1.portal";

message PortalSlotDesc {
  ai.lzy.v1.common.Slot slot = 1;
  string channelId = 2;

  message Snapshot {
    // external s3 storage
    ai.lzy.v1.common.StorageConfig storageConfig = 1;
  }

  message StdOut {
    string taskId = 1;
  }

  message StdErr {
    string taskId = 1;
  }

  oneof kind {
    // snapshot slot to save into external (persistent) and internal volatile portal storage
    Snapshot snapshot = 10;
    // stdout/stderr of tasks (will be combined and transferred to portal stdout/stderr slots)
    StdOut stdout = 11;
    StdErr stderr = 12;
  }
}
